Bug: Hid img overflow in story .illustration to increase active size of AppBar buttons

--- a/app/css/my-story.css
+++ b/app/css/my-story.css
@@ -40,6 +40,7 @@
 
 #illustration img {
   object-fit: cover;
+  overflow: hidden;
 }
 
 @media only screen and (min-width: 849px) {
